--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ document.querySelector('.playWAV').addEventListener('click', function(){
   playSound('smb_gameover.wav');
 });
 document.querySelector('.playMP3').addEventListener('click', function(){
-  playSound('music.mp3');
+  playSound('there_is_nothing_behind_me.wav');
 });
 </script>
 
